- Fixed some findbugs issues